update notebook (scraping of press-releases done)

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -42,12 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4b5c5d7a-f727-4385-8c30-49347b73d692",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests, pathlib, time, re, logging, textwrap\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -91,147 +94,271 @@
    "id": "cd62da74-4319-486d-adee-9058dbc9f495",
    "metadata": {},
    "source": [
-    "## Parse search output for links (on one page): "
+    "## Suchergebnisse scrapen und Pressemitteilungen extrahieren (auf einer Seite): "
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "39f14d7a-450f-4dac-95d6-457d668d2b4b",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f973641b-67cf-4a7c-8f28-a51b92e03e07",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "173722f1-857d-4173-835f-cf311d8b03a9",
-   "metadata": {},
+   "outputs": [],
    "source": [
-    "## End of the updated version"
+    "# -- organise data ----------------------------------------------------\n",
+    "SAMPLE_OUTPUT_PAGE = (\n",
+    "    \"https://www.berlin.de/presse/pressemitteilungen/index/search/?searchtext=&boolean=0&startdate=&enddate=&alle-senatsverwaltungen=on&institutions%5B%5D=Presse-+und+Informationsamt+des+Landes+Berlin&institutions%5B%5D=Senatsverwaltung+für+Bildung%2C+Jugend+und+Familie&institutions%5B%5D=Senatsverwaltung+für+Finanzen&institutions%5B%5D=Senatsverwaltung+für+Inneres+und+Sport&institutions%5B%5D=Senatsverwaltung+für+Arbeit%2C+Soziales%2C+Gleichstellung%2C+Integration%2C+Vielfalt+und+Antidiskriminierung&institutions%5B%5D=Senatsverwaltung+für+Justiz+und+Verbraucherschutz&institutions%5B%5D=Senatsverwaltung+für+Kultur+und+Gesellschaftlichen+Zusammenhalt&institutions%5B%5D=Senatsverwaltung+für+Stadtentwicklung%2C+Bauen+und+Wohnen&institutions%5B%5D=Senatsverwaltung+für+Mobilität%2C+Verkehr%2C+Klimaschutz+und+Umwelt&institutions%5B%5D=Senatsverwaltung+für+Wirtschaft%2C+Energie+und+Betriebe&institutions%5B%5D=Senatsverwaltung+für+Wissenschaft%2C+Gesundheit+und+Pflege&alle-bezirksamt=on&institutions%5B%5D=Bezirksamt+Charlottenburg-Wilmersdorf&institutions%5B%5D=Bezirksamt+Friedrichshain-Kreuzberg&institutions%5B%5D=Bezirksamt+Lichtenberg&institutions%5B%5D=Bezirksamt+Marzahn-Hellersdorf&institutions%5B%5D=Bezirksamt+Mitte&institutions%5B%5D=Bezirksamt+Neukölln&institutions%5B%5D=Bezirksamt+Pankow&institutions%5B%5D=Bezirksamt+Reinickendorf&institutions%5B%5D=Bezirksamt+Spandau&institutions%5B%5D=Bezirksamt+Steglitz-Zehlendorf&institutions%5B%5D=Bezirksamt+Tempelhof-Schöneberg&institutions%5B%5D=Bezirksamt+Treptow-Köpenick&alle-landesbeauftragte=on&institutions%5B%5D=Beauftragte+des+Senats+für+Integration+und+Migration&institutions%5B%5D=Beauftragter+zur+Aufarbeitung+der+SED-Diktatur&institutions%5B%5D=Bürger-+und+Polizeibeauftragter+des+Landes+Berlin&institutions%5B%5D=Pflegebeauftragte+des+Landes+Berlin&institutions%5B%5D=Landestierschutzbeauftragte&institutions%5B%5D=Landeswahlleitung&bt=\"\n",
+    ") \n",
+    "DATA_DIR   = pathlib.Path(\"../data-updated\")          # keep same root as repo\n",
+    "HTML_DIR   = DATA_DIR / \"html\"\n",
+    "TXT_DIR    = DATA_DIR / \"txt\"\n",
+    "HTML_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "TXT_DIR.mkdir(parents=True,  exist_ok=True)\n",
+    "logging.basicConfig(level=logging.INFO, format=\"%(levelname)s: %(message)s\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2b204f89-e3cb-4dfb-9cc3-82406fd74961",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6d83d1d3-86af-41db-a8db-b14b270d17bb",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Generate set of links to all pages containing links to press releases\n",
-    "This means that to generate this links all we need is to iterate over numbers. \n",
-    "Let's make a rough estimate at first and simply create 10000 entries.\n",
+    "# -- helper -----------------------------------------------------------------\n",
     "\n",
-    "First we will create an empty list:"
+    "def get_soup(url: str) -> BeautifulSoup:\n",
+    "    \"\"\"Download a page and return BeautifulSoup (retry politely on transient errors).\"\"\"\n",
+    "    while True:\n",
+    "        r = requests.get(\n",
+    "            url,\n",
+    "            timeout=20,\n",
+    "            headers={\"User-Agent\": \"Mozilla/5.0 (compatible; QuadrigaScraper/1.0)\"}\n",
+    "        )\n",
+    "        if r.status_code == 200:\n",
+    "            return BeautifulSoup(r.text, \"lxml\")\n",
+    "        logging.warning(\"Status %s on %s – retrying in 5 s\", r.status_code, url)\n",
+    "        time.sleep(5)\n",
+    "\n",
+    "def slugify(text_: str, maxlen: int = 60) -> str:\n",
+    "    \"\"\"Rough filename-safe slug for headlines.\"\"\"\n",
+    "    text_ = re.sub(r\"\\W+\", \"-\", text_.lower()).strip(\"-\")\n",
+    "    return text_[:maxlen] or \"untitled\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "577fdf92-4f28-4a8a-8dfa-5c607098d6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 rows on the page.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|█████████████████████████████████████| 10/10 [00:05<00:00,  1.73it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>ressort</th>\n",
+       "      <th>title</th>\n",
+       "      <th>pr_url</th>\n",
+       "      <th>filename_html</th>\n",
+       "      <th>filename_txt</th>\n",
+       "      <th>n_tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16.06.2025</td>\n",
+       "      <td>Senatsverwaltung für Wirtschaft, Energie und B...</td>\n",
+       "      <td>Berlin stellt neues Esport-Nachwuchsteam vor –...</td>\n",
+       "      <td>https://www.berlin.de/sen/web/presse/pressemit...</td>\n",
+       "      <td>1570469.html</td>\n",
+       "      <td>1570469.txt</td>\n",
+       "      <td>933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16.06.2025</td>\n",
+       "      <td>Bezirksamt Spandau</td>\n",
+       "      <td>Drei Sprachen, ein Tag: Dein Tor zum Norden</td>\n",
+       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
+       "      <td>1570459.html</td>\n",
+       "      <td>1570459.txt</td>\n",
+       "      <td>754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16.06.2025</td>\n",
+       "      <td>Bezirksamt Spandau</td>\n",
+       "      <td>Schnupperkurs Qi Gong in der Stadtbibliothek S...</td>\n",
+       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
+       "      <td>1570455.html</td>\n",
+       "      <td>1570455.txt</td>\n",
+       "      <td>658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.06.2025</td>\n",
+       "      <td>Bezirksamt Spandau</td>\n",
+       "      <td>Digitaltag 2025: Digitalisierung von Archivbes...</td>\n",
+       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
+       "      <td>1570447.html</td>\n",
+       "      <td>1570447.txt</td>\n",
+       "      <td>704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16.06.2025</td>\n",
+       "      <td>Bezirksamt Treptow-Köpenick</td>\n",
+       "      <td>Kunst am Bau: Entscheidung im Kunstwettbewerb ...</td>\n",
+       "      <td>https://www.berlin.de/ba-treptow-koepenick/akt...</td>\n",
+       "      <td>1570440.html</td>\n",
+       "      <td>1570440.txt</td>\n",
+       "      <td>1008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date                                            ressort  \\\n",
+       "0  16.06.2025  Senatsverwaltung für Wirtschaft, Energie und B...   \n",
+       "1  16.06.2025                                 Bezirksamt Spandau   \n",
+       "2  16.06.2025                                 Bezirksamt Spandau   \n",
+       "3  16.06.2025                                 Bezirksamt Spandau   \n",
+       "4  16.06.2025                        Bezirksamt Treptow-Köpenick   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0  Berlin stellt neues Esport-Nachwuchsteam vor –...   \n",
+       "1        Drei Sprachen, ein Tag: Dein Tor zum Norden   \n",
+       "2  Schnupperkurs Qi Gong in der Stadtbibliothek S...   \n",
+       "3  Digitaltag 2025: Digitalisierung von Archivbes...   \n",
+       "4  Kunst am Bau: Entscheidung im Kunstwettbewerb ...   \n",
+       "\n",
+       "                                              pr_url filename_html  \\\n",
+       "0  https://www.berlin.de/sen/web/presse/pressemit...  1570469.html   \n",
+       "1  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570459.html   \n",
+       "2  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570455.html   \n",
+       "3  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570447.html   \n",
+       "4  https://www.berlin.de/ba-treptow-koepenick/akt...  1570440.html   \n",
+       "\n",
+       "  filename_txt  n_tokens  \n",
+       "0  1570469.txt       933  \n",
+       "1  1570459.txt       754  \n",
+       "2  1570455.txt       658  \n",
+       "3  1570447.txt       704  \n",
+       "4  1570440.txt      1008  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# -- step 1: parse ONE results page -----------------------------------------\n",
+    "search_soup = get_soup(SAMPLE_OUTPUT_PAGE)\n",
+    "\n",
+    "rows = search_soup.select(\"table tbody tr\")   # table layout is stable since 2019\n",
+    "records = []\n",
+    "print(f\"Found {len(rows)} rows on the page.\")\n",
+    "\n",
+    "for tr in tqdm(rows, desc=\"Rows\"):\n",
+    "    # grab all data cells once\n",
+    "    cells = tr.find_all(\"td\")\n",
+    "    if len(cells) < 3:          # footer / empty rows → ignore\n",
+    "        continue\n",
+    "\n",
+    "    # column 1 – date\n",
+    "    date_txt = cells[0].get_text(strip=True)\n",
+    "\n",
+    "    # column 2 – headline + link\n",
+    "    anchor = cells[1].find(\"a\", href=True)\n",
+    "    if anchor is None:          # safety check\n",
+    "        continue\n",
+    "    title   = anchor.get_text(strip=True)\n",
+    "    pr_url  = \"https://www.berlin.de\" + anchor[\"href\"]\n",
+    "\n",
+    "    # column 3 – issuing authority (“Ressort”)\n",
+    "    ressort = cells[2].get_text(strip=True)\n",
+    "\n",
+    "    # deterministic ID, e.g. 1570469\n",
+    "    uid = anchor[\"href\"].split(\"/\")[-1].split(\".\")[-2]\n",
+    "\n",
+    "        # -- step 2: download the press release itself -----------\n",
+    "    html_file = HTML_DIR / f\"{uid}.html\"\n",
+    "    txt_file  = TXT_DIR  / f\"{uid}.txt\"\n",
+    "\n",
+    "    if not html_file.exists():        # skip if already scraped\n",
+    "        pr_soup = get_soup(pr_url)\n",
+    "\n",
+    "        # write raw HTML\n",
+    "        html_file.write_text(str(pr_soup), encoding=\"utf-8\")\n",
+    "\n",
+    "        # extract main text; fallback to whole page if CSS id changes\n",
+    "        body = (pr_soup.select_one(\"#article\") or        # new layout (2024)\n",
+    "                pr_soup.select_one(\"#content\") or        # classic layout\n",
+    "                pr_soup)                                 # last resort\n",
+    "        clean_text = body.get_text(\" \", strip=True)\n",
+    "        txt_file.write_text(clean_text, encoding=\"utf-8\")\n",
+    "    else:\n",
+    "        # we still need the plain text length for the DataFrame below\n",
+    "        clean_text = txt_file.read_text(encoding=\"utf-8\")\n",
+    "\n",
+    "    records.append(\n",
+    "        dict(\n",
+    "            date=date_txt,\n",
+    "            ressort=ressort,\n",
+    "            title=title,\n",
+    "            pr_url=pr_url,\n",
+    "            filename_html=html_file.name,\n",
+    "            filename_txt=txt_file.name,\n",
+    "            n_tokens=len(clean_text.split())\n",
+    "        )\n",
+    "    )\n",
+    "    time.sleep(0.4)      # politeness\n",
+    "\n",
+    "# -- step 3: inspect the harvested metadata ---------------------------------\n",
+    "df = pd.DataFrame(records)\n",
+    "df.head()          # normal Jupyter display is fine ― no extra libraries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeeafb61-65f1-4e14-9048-66bb6cb9b724",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "links_to_releases = []"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23b5c58f-528f-4658-9a5a-68328c96be5b",
-   "metadata": {},
-   "source": [
-    "Then we will iterate over numbers from 1 to 10000, form a link and store it in the list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2440128-21c6-4a7e-8130-c8cb09a91d78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(1, 10000):\n",
-    "    url = f'https://www.berlin.de/presse/pressemitteilungen/index/index/page/{i}'\n",
-    "    links_to_releases.append(url)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0498e217-d32c-4f17-a222-78f2a5419ba5",
-   "metadata": {},
-   "source": [
-    "Let us look at the first five entries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68a133f3-a149-471c-8b10-be7059242e86",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print(links_to_releases[:5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c07a975a-288d-4754-bb71-bb79455ef735",
-   "metadata": {},
-   "source": [
-    "Let us try to access one of them with an HTTP request and see if it returns status code 200:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86e36fe7-f611-49c5-aea8-554c18bd4ab3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "links_to_releases[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f77fcb14-4985-4738-ac6a-6f0d7393e561",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "links_to_releases[3]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed1fd111-78b7-4850-8715-663720404b12",
-   "metadata": {},
-   "source": [
-    "## Obtain links to the actual press releases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37ba8995-0539-4287-84ff-38da1ecdc606",
+   "id": "36386c94-1263-49a0-9d1b-f7f0e09f1f4a",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d47307a-0975-4cc1-a35b-d68c2ec77482",
-   "metadata": {},
-   "source": [
-    "To study the way Berlin authorities communicate with the public, we can focus on their press-releases. Let us examine the page with press releases: https://www.berlin.de/presse/pressemitteilungen\n",
-    "Iа we look at the menu, we'll see that it contains the press-releases of the Berlin authorities since 1993... The links to the pages with press-releases are quite predictable, they just go from page 1 to more than 7000 (the entire number is growing as new releases are being added):  \n",
-    "\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/2\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/3\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/4\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/5\n",
-    "* ...\n",
-    "* ...\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7193\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7194\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7195\n"
-   ]
   }
  ],
  "metadata": {
