add missing library install

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# 🚀 Install libraries \n",
-    "!pip install requests "
+    "!pip install requests tqdm "
    ]
   },
   {
