add foldable code explanation

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "<button onclick=\"myFunction()\">Was passiert hier oben?</button>\n",
     "\n",
-    "<div id=\"myDIV\">\n",
+    "<div id=\"myDIV\" style=\"display:block;\">\n",
     "    \n",
     "**Was passiert hier?**\n",
     "\n",
