toggle cell visibilities

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -11,7 +11,13 @@
   {
    "cell_type": "markdown",
    "id": "c8db05ff-df64-4e47-aea4-beb1008c13d4",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Hinweise zur Ausführung des Notebooks\n",
     "Dieses Notebook kann auf unterschiedlichen Levels erarbeitet werden (siehe Abschnitt [\"Technische Voraussetzungen\"](../markdown/introduction_requirements)): \n",
@@ -33,7 +39,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f0fb10a4-c384-4b7e-a956-2fa13cb1a34c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# 🚀 Install libraries \n",
@@ -44,7 +58,15 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "4b5c5d7a-f727-4385-8c30-49347b73d692",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "import requests, pathlib, time, re, logging, textwrap\n",
@@ -101,7 +123,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f973641b-67cf-4a7c-8f28-a51b92e03e07",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [],
    "source": [
     "# -- organise data ----------------------------------------------------\n",
@@ -120,7 +150,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "6d83d1d3-86af-41db-a8db-b14b270d17bb",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [],
    "source": [
     "# -- helper -----------------------------------------------------------------\n",
@@ -147,7 +185,13 @@
   {
    "cell_type": "markdown",
    "id": "a49834fb-f7c2-4811-8319-369c5cbc6bb9",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "<button onclick=\"myFunction()\">Was passiert hier oben?</button>\n",
     "\n",
@@ -194,7 +238,15 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "577fdf92-4f28-4a8a-8dfa-5c607098d6a9",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
