add unfold button

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "<button onclick=\"myFunction()\">Was passiert hier oben?</button>\n",
     "\n",
-    "<div id=\"myDIV\" style=\"display:block;\">\n",
+    "<div id=\"myDIV\" style=\"display:none\">\n",
     "    \n",
     "**Was passiert hier?**\n",
     "\n",
@@ -386,7 +386,7 @@
     "# -- step 1: parse ONE results page -----------------------------------------\n",
     "search_soup = get_soup(SAMPLE_OUTPUT_PAGE)\n",
     "\n",
-    "rows = search_soup.select(\"table tbody tr\")   # table layout is stable since 2019\n",
+    "rows = search_soup.select(\"table tbody tr\")  \n",
     "records = []\n",
     "print(f\"Found {len(rows)} rows on the page.\")\n",
     "\n",
