fix unfolding explanations for the code cell

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -193,11 +193,11 @@
     "tags": []
    },
    "source": [
-    "<button onclick=\"myFunction()\">Was passiert hier oben?</button>\n",
+    "<button onclick=\"myFunction()\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
     "\n",
     "<div id=\"myDIV\" style=\"display:none\">\n",
     "    \n",
-    "### Was passiert in diesem Codeblock? – Schritt für Schritt\n",
+    "### Was passiert in diesem Codeblock oben?\n",
     "\n",
     "1. **`get_soup()`**\n",
     "\n",
@@ -461,11 +461,11 @@
     "tags": []
    },
    "source": [
-    "<button onclick=\"myFunction()\">Was passiert hier oben?</button>\n",
+    "<button onclick=\"myFunction()\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
     "\n",
     "<div id=\"myDIV\" style=\"display:none\">\n",
     "\n",
-    "### Was passiert in diesem Codeblock? – Schritt für Schritt\n",
+    "### Was passiert in diesem Codeblock oben? – Schritt für Schritt\n",
     "\n",
     "1. **Erste Seite einlesen**\n",
     "\n",
@@ -625,7 +625,20 @@
     "\n",
     "So wird auf anschauliche Weise demonstriert, wie man **gezielt Teile einer\n",
     "HTML-Tabelle parst**, die Detailseiten herunterlädt, Text extrahiert und alles\n",
-    "sauber für weitere Analysen ablegt.\n"
+    "sauber für weitere Analysen ablegt.\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<script>\n",
+    "function myFunction() {\n",
+    "  var x = document.getElementById(\"myDIV\");\n",
+    "  if (x.style.display === \"none\") {\n",
+    "    x.style.display = \"block\";\n",
+    "  } else {\n",
+    "    x.style.display = \"none\";\n",
+    "  }\n",
+    "}\n",
+    "</script>\n"
    ]
   },
   {
