fix unfolding explanations for the code cell

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -102,7 +102,13 @@
   {
    "cell_type": "markdown",
    "id": "cd435155-4cbf-456d-b39e-955b99b362e8",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Wir sehen, dass die Links hier in einer Tabelle gespeichert sind. In HTML wird eine Tabelle mit dem `<table>`-Element dargestellt. Wenn wir den Quellcode dieser Seite betrachten, stellen wir fest, dass sie eine Tabelle enthält, in der alle Links aufgeführt sind:\n",
     "\n",
@@ -463,7 +469,7 @@
    "source": [
     "<button onclick=\"myFunction()\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
     "\n",
-    "<div id=\"myDIV\" style=\"display:none\">\n",
+    "<div id=\"myDIV2\" style=\"display:none\">\n",
     "\n",
     "### Was passiert in diesem Codeblock oben? – Schritt für Schritt\n",
     "\n",
@@ -631,7 +637,7 @@
     "\n",
     "<script>\n",
     "function myFunction() {\n",
-    "  var x = document.getElementById(\"myDIV\");\n",
+    "  var x = document.getElementById(\"myDIV2\");\n",
     "  if (x.style.display === \"none\") {\n",
     "    x.style.display = \"block\";\n",
     "  } else {\n",
